# ods-quickstarters

./: .gitignore  CHANGELOG.md  CODEOWNERS  Makefile  README.md  Tailorfile  requirements.txt
.github/: dependabot.yml  pull_request_template.md
airflow-cluster/: Jenkinsfile  Jenkinsfile.template  README.md  custom-create-components.sh
be-airflow/: Jenkinsfile  Jenkinsfile.template  README.md  custom-create-components.sh
be-fe-mono-repo-plain/: Dockerfile_fe.template  Jenkinsfile  Jenkinsfile.template  README.md  sonar-project.properties.template
be-gateway-kong/: Jenkinsfile  Jenkinsfile.template  README.md  create-be-gateway-kong-components.sh  init.sh  ocp.env
be-gateway-nginx/: Dockerfile.template  Jenkinsfile  Jenkinsfile.template  README.md  ocp.env
be-golang-plain/: Dockerfile.template  Jenkinsfile  Jenkinsfile.template  README.md  ocp.env  sonar-project.properties.template
be-java-springboot/: Jenkinsfile  Jenkinsfile.template  Makefile  README.md  README.md.template  ocp.env  postProcessProjectsettings.sh  sonar-project.properties.template
be-python-flask/: .gitignore  Jenkinsfile  Jenkinsfile.template  README.md  ocp.env  sonar-project.properties.template
be-rust-axum/: Jenkinsfile  Jenkinsfile.template  README.md  ocp.env  sonar-project.properties.template
be-rust-axum/rust-template/: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  cargo-generate.toml  deny.toml  metadata.yml  rust-toolchain.toml  rustfmt.toml
be-rust-axum/rust-template/.config/: nextest.toml
be-rust-axum/rust-template/chart/: Chart.yaml  values.yaml
be-rust-axum/rust-template/chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml
be-rust-axum/rust-template/docker/: Dockerfile
be-rust-axum/rust-template/src/: lib.rs  main.rs
be-rust-axum/rust-template/src/api/: mod.rs  router.rs
be-rust-axum/rust-template/src/api/routes/: mod.rs  status.rs
be-rust-axum/rust-template/src/config/: mod.rs  settings.rs
be-rust-axum/rust-template/src/models/: mod.rs  status.rs
be-rust-axum/rust-template/tests/: common.rs  status_test.rs
be-scala-akka/: Jenkinsfile  Jenkinsfile.template  README.md  init.sh  ocp.env  sonar-project.properties.template
be-scala-play/: Jenkinsfile  Jenkinsfile.template  README.md  sonar-project.properties.template
be-typescript-express/: Dockerfile.template  Jenkinsfile  Jenkinsfile.template  README.md  add-to-package-json.py  init.sh  ocp.env  sonar-project.properties.template
beSpringBoot/: Jenkinsfile  postProcessProjectsettings.sh
docker-plain/: .gitignore  Chart.yaml.template  Dockerfile.template  Jenkinsfile  Jenkinsfile.template  README.md  sonar-project.properties.template
docs/: antora.yml
ds-dash/: Jenkinsfile  Jenkinsfile.template  README.md
ds-jupyter-lab/: Jenkinsfile  Jenkinsfile.template  README.md
ds-jupyter-notebook/: Jenkinsfile  Jenkinsfile.template  README.md
ds-ml-service/: Jenkinsfile  Jenkinsfile.template  README.md  custom-create-components.sh  ocp.env  sonar-project.properties.template
ds-rshiny/: Jenkinsfile  Jenkinsfile.template  README.md
ds-streamlit/: Jenkinsfile  Jenkinsfile.template  sonar-project.properties.template
e2e-cypress/: Jenkinsfile  Jenkinsfile.template  README.md  changelog.md  metadata.yml  sonar-project.properties.template
e2e-etl-python/: Jenkinsfile  Jenkinsfile.template  README.md  dev.yml.template  prod.yml.template  test.yml.template  testing.yml.template
e2e-python/: Jenkinsfile.template  README.md
e2e-spock-geb/: Jenkinsfile  Jenkinsfile.template  README.md  (+1 more)
fe-angular/: Jenkinsfile  (+4 more)
(+1052 files in other folders)
